# StockPrediction

./: CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md  build.ps1  code_expl.md  code_only.json  visualize.py
data/: ohlcv_100_days_style.csv  sample.csv  sample_1.csv  stock_data.csv
docs/: architecture.mmd
markdownFiles/: IMPLEMENTATION_SUMMARY.md  PREDICTOR_README.md  PROJECT_REPORT.md  QUICK_REFERENCE.md  helper.md
output/: metrics.txt  predictions.csv
src/: backtester.cpp  backtester.h  csv_loader.cpp  csv_loader.h  feature_engineer.cpp  feature_engineer.h  helper.md  indicator.cpp  indicator.h  linear_regression.cpp  linear_regression.h  main.cpp  metrics.cpp  metrics.h  predictor.cpp  strategy.cpp  strategy.h
tests/: indicator_tests.cpp  predictor_tests.cpp
